--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         window.alert("Minha primeira mensagem");
         window.confirm("Está gostando de JS?");
         window.prompt("Qual é seu nome ?")
+
+        
     </script>
     
     </body>
-
+        <h1> teste de commit </h1>
 </html>
